--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | AURA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/login.css">
 </head>
 <body class="auth-page">
   <div class="auth-container">
@@ -40,6 +40,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <script src="firebase.js"></script>
+  <script src="../backend/firebase.js"></script>
 </body>
 </html>
