--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -9,7 +9,7 @@
 <body class="profile-page">
   <nav class="navbar">
     <div class="container">
-      <a href="./index.html" class="navbar-brand">AURA</a>
+      <a href="../index.html" class="navbar-brand">AURA</a>
       <div class="nav-links">
         <a class="nav-link" href="./index.html">Home</a>
         <a class="nav-link" href="#" id="logoutBtn">Logout</a>
