--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- área de autenticação alinhada à direita -->
   <div class="auth-area">
     <!-- botão de login (visível quando deslogado) -->
-    <a id="loginBtn" href="./login.html" class="login-btn">Login</a>
+    <a id="loginBtn" href="./frontend/login.html" class="login-btn">Login</a>
 
     <!-- menu de perfil (visível quando logado) -->
     <div id="profileMenu" class="profile-menu">
@@ -35,7 +35,7 @@
       </button>
 
       <div id="dropdownMenu" class="dropdown" aria-hidden="true">
-        <a href="./perfil.html" id="alterarDados"><i class="fa-solid fa-id-card"></i> Alterar Dados</a>
+        <a href="./frontend/perfil.html" id="alterarDados"><i class="fa-solid fa-id-card"></i> Alterar Dados</a>
         <button id="logoutBtn" class="logout"><i class="fa-solid fa-right-from-bracket"></i> Sair</button>
       </div>
     </div>
