--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
     <script src="../backend/firebase.js"></script>
-    <script src="./js/animations.js"></script>
+    <script src="./frontend/js/animations.js"></script>
   </body>
 </html>
