--- a/frontend/perfil.html
+++ b/frontend/perfil.html
@@ -11,7 +11,7 @@
     <div class="container">
       <a href="../index.html" class="navbar-brand">AURA</a>
       <div class="nav-links">
-        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="../index.html">Home</a>
         <a class="nav-link" href="#" id="logoutBtn">Logout</a>
       </div>
     </div>
