--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
           ajudo a descobrir.”</p>
         </div>
         <div class="character-img">
-          <img src="../img/coruja.png" alt="Nocti" />
-          <img src="../img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
+          <img src="./img/coruja.png" alt="Nocti" />
+          <img src="./img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
         </div>
       </div>
 
       <div class="character mobi">
         <div class="character-img">
-          <img src="../img/macaco.png" alt="Mobi" />
-          <img src="../img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
+          <img src="./img/macaco.png" alt="Mobi" />
+          <img src="./img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
         </div>
         <div class="character-text">
           <h3>Mobi</h3>
@@ -100,8 +100,8 @@
           <p>Um elefante gentil que ensina a importância da memória e da amizade.</p>
         </div>
         <div class="character-img">
-          <img src="../img/elefante.png" alt="Elefante Luno" />
-          <img src="../img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
+          <img src="./img/elefante.png" alt="Elefante Luno" />
+          <img src="./img/nuvem.png" class="cloud decor" alt="Nuvem decorativa" />
         </div>
       </div>
     </section>
@@ -115,7 +115,7 @@
 
       <div class="sobre-bottom">
         <div class="sobre-img-top">
-          <img src="../img/amigos.png" alt="Personagens AURA assistindo TV" />
+          <img src="./img/amigos.png" alt="Personagens AURA assistindo TV" />
         </div>
 
         <div class="ajuda-contato">
@@ -131,7 +131,7 @@
           </div>
 
           <div class="ajuda-img">
-            <img src="../img/friends.png" alt="Personagens AURA felizes" />
+            <img src="./img/friends.png" alt="Personagens AURA felizes" />
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-    <script src="../backend/firebase.js"></script>
+    <script src="./backend/firebase.js"></script>
     <script src="./frontend/js/animations.js"></script>
   </body>
 </html>
