--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | AURA</title>
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="./frontend/css/login.css">
 </head>
 <body class="auth-page">
   <div class="auth-container">
@@ -42,7 +42,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
-<script src="../backend/firebase.js"></script>
+<script src="./backend/firebase.js"></script>
 
 </body>
 </html>
