--- a/perfil.html
+++ b/perfil.html
@@ -9,9 +9,9 @@
 <body class="profile-page">
   <nav class="navbar">
     <div class="container">
-      <a href="../index.html" class="navbar-brand">AURA</a>
+      <a href="index.html" class="navbar-brand">AURA</a>
       <div class="nav-links">
-        <a class="nav-link" href="../index.html">Home</a>
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="#" id="logoutBtn">Logout</a>
       </div>
     </div>
@@ -46,7 +46,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <script src="../backend/firebase.js"></script>
+  <script src="./backend/firebase.js"></script>
 
   <script>
     // Verifica login
