--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
 
         <div class="image">
-          <img src="../img/coruja.png" alt="Coruja AURA" />
+          <img src="./img/coruja.png" alt="Coruja AURA" />
         </div>
       </div>
-      <img src="../img/nuvem.png" alt="Nuvem" class="cloud left" />
+      <img src="./img/nuvem.png" alt="Nuvem" class="cloud left" />
     </section>
 
     <section class="characters" id="characters">
