--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <body class="auth-page">
   <div class="auth-container">
     <div class="auth-col auth-col-left">
+      <button class="back-btn" onclick="window.location.href='index.html'">← Voltar</button>
       <h2>Seja Bem-Vindo(a)</h2>
       <p>É um fato estabelecido há muito tempo que um leitor será distraído pelo conteúdo legível de uma página.</p>
     </div>
