--- a/perfil.html
+++ b/perfil.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Editar Perfil - AURA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./frontend/css/perfil.css">
 </head>
 <body class="profile-page">
   <nav class="navbar">
